...
            android:text=   "@string/create_poem"
            android:textColor="@color/text_color"
            app:backgroundTint="@color/madzinza_green" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/backgroundPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="57dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomOfBackgroundPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topOfBackgroundPreview">

        <FrameLayout
            android:id="@+id/outlinePreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/outlineColorPreview"
                android:layout_width="match_parent"
...
            android:text="@string/preview_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imagePreviewCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"
            android:background="@color/default_background_color"
            app:cardElevation="0dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imagePreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

...
        app:layout_constraintBottom_toBottomOf="@id/bottomOfThemer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/topOfThemer">

        <LinearLayout
            android:id="@+id/mainLinearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/headingLayoutContainer"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:baselineAligned="false">

                <FrameLayout
                    android:id="@+id/outline"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:background="@drawable/heading_background">

                    <TextView
...
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/heading_layout_normal"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/background"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
...
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/heading_layout_normal"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/text"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
...
                        android:textSize="@dimen/heading_layout_normal"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/outlineContainer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <FrameLayout
                    android:id="@+id/rectangle_outline"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_rectangle_outline"
...

        </LinearLayout>



            <LinearLayout
                android:id="@+id/imagesContainer1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:visibility="gone">

                <FrameLayout
                    android:id="@+id/backgroundColorsIcon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rounded_rectangle">

                    <TextView
...
                        android:contentDescription="@string/image"
                        android:src="@drawable/gallery_icon" />
                </FrameLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerImageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="gone" />

            <LinearLayout
...
