...
    <string name="cabal_bold_font" translatable="false">Cabal Bold</string>
    <string name="lobster_regular_font" translatable="false">Lobster Regular</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_new_image">Add New Image</string>
    <string name="color_picker_title">Select Color</string>
    <string name="remove_background_color_outline_popup">Would you like to remove the outline or the background color</string>
    <string name="remove_background_image_outline_popup">Would you like to remove the outline or the image</string>
    <string name="remove_background_title">Remove Background Element</string>
    <string name="positive_background_color_outline_button">Outline</string>
    <string name="negative_background_color_outline_button">Color</string>
    <string name="negative_background_image_outline_button">Image</string>
    <string name="create_poem_title">Give Your Poem A Title :)</string>
    <string name="confirm">Confirm</string>
    <string name="retry">Retry</string>
    <string name="invalid_input">Invalid input</string>
    <string name="invalid_input_message">You have entered a name which does not contain letters
    and or numbers. Please enter a valid name.</string>
...
